Add api version to endpoints, add v2 game versions endpoint
